tests/baselines/reference/throwWithoutNewLine2.errors.txt
tests/cases/compiler/throwWithoutNewLine2.ts(1,6): error TS1142: Line break not permitted here.
tests/cases/compiler/throwWithoutNewLine2.ts(2,1): error TS2304: Cannot find name 'a'.
tests/cases/compiler/throwWithoutNewLine2.ts(2,1): error TS7027: Unreachable code detected.


==== tests/cases/compiler/throwWithoutNewLine2.ts (3 errors) ====
    throw
         
!!! error TS1142: Line break not permitted here.
    a;
    ~
!!! error TS2304: Cannot find name 'a'.
    ~
!!! error TS7027: Unreachable code detected.